Put meta tags on master

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Search Engine -->
+  <meta name="description" content="New Zealand's premier conference for software developers.">
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="Codemania">
+  <meta itemprop="description" content="New Zealand's premier conference for software developers.">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Codemania">
+  <meta name="twitter:description" content="New Zealand's premier conference for software developers.">
+  <meta name="twitter:site" content="@codemania">
+  <meta name="twitter:image:src" content="https://codemaniatest.herokuapp.com/static/media/logo-cm.bd91faeb.svg">
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="Codemania">
+  <meta name="og:description" content="New Zealand's premier conference for software developers.">
+  <meta name="og:image" content="https://codemaniatest.herokuapp.com/static/media/logo-cm.bd91faeb.svg">
+  <meta name="og:url" content="https://codemania.io">
+  <meta name="og:site_name" content="Codemania">
+  <meta name="og:locale" content="en_NZ">
+  <meta name="fb:admins" content="100001421670439">
+  <meta name="fb:app_id" content="335782529773277">
+  <meta name="og:type" content="website">
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css">
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="%PUBLIC_URL%/reset.css">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -20,14 +41,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Codemania</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
+  <title>Codemania</title>
+</head>
+
+<body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -37,5 +59,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
