Twitter & facebook graph things

--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,24 @@
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Codemania">
   <meta itemprop="description" content="New Zealand's premier conference for software developers.">
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Codemania">
-  <meta name="twitter:description" content="New Zealand's premier conference for software developers.">
-  <meta name="twitter:site" content="@codemania">
-  <meta name="twitter:image:src" content="https://codemaniatest.herokuapp.com/static/media/logo-cm.bd91faeb.svg">
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Codemania">
   <meta name="og:description" content="New Zealand's premier conference for software developers.">
-  <meta name="og:image" content="https://codemaniatest.herokuapp.com/static/media/logo-cm.bd91faeb.svg">
+  <meta name="og:image" content="%PUBLIC_URL%/card.png">
   <meta name="og:url" content="https://codemania.io">
   <meta name="og:site_name" content="Codemania">
   <meta name="og:locale" content="en_NZ">
   <meta name="fb:admins" content="100001421670439">
   <meta name="fb:app_id" content="335782529773277">
   <meta name="og:type" content="website">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Codemania">
+  <meta name="twitter:description" content="New Zealand's premier conference for software developers.">
+  <meta name="twitter:site" content="@codemania">
+  <meta name="twitter:image:src" content="%PUBLIC_URL%/card.png">
+
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
