--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,22 @@
   <meta itemprop="name" content="Codemania">
   <meta itemprop="description" content="New Zealand's premier conference for software developers.">
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-  <meta name="og:title" content="Codemania">
-  <meta name="og:description" content="New Zealand's premier conference for software developers.">
-  <meta name="og:image" content="%PUBLIC_URL%/card.png">
-  <meta name="og:url" content="https://codemania.io">
-  <meta name="og:site_name" content="Codemania">
-  <meta name="og:locale" content="en_NZ">
-  <meta name="fb:admins" content="100001421670439">
-  <meta name="fb:app_id" content="335782529773277">
-  <meta name="og:type" content="website">
+  <meta property="og:title" content="Codemania">
+  <meta property="og:description" content="New Zealand's premier conference for software developers.">
+  <meta property="og:image" content="%PUBLIC_URL%/card.png">
+  <meta property="og:url" content="https://codemania.io">
+  <meta property="og:site_name" content="Codemania">
+  <meta property="og:locale" content="en_NZ">
+  <meta property="fb:admins" content="100001421670439">
+  <meta property="fb:app_id" content="335782529773277">
+  <meta property="og:type" content="website">
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Codemania">
-  <meta name="twitter:description" content="New Zealand's premier conference for software developers.">
-  <meta name="twitter:site" content="@codemania">
-  <meta name="twitter:image:src" content="%PUBLIC_URL%/card.png">
+  <meta property="twitter:card" content="summary">
+  <meta property="twitter:title" content="Codemania">
+  <meta property="twitter:description" content="New Zealand's premier conference for software developers.">
+  <meta property="twitter:site" content="@codemania">
+  <meta property="twitter:image:src" content="%PUBLIC_URL%/card.png">
 
   <!--
       manifest.json provides metadata used when your web app is added to the
