--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta property="og:title" content="Codemania">
   <meta property="og:description" content="New Zealand's premier conference for software developers.">
-  <meta property="og:image" content="%PUBLIC_URL%/card.png">
+  <meta property="og:image" content="https://codemania.io/card.png">
   <meta property="og:url" content="https://codemania.io">
   <meta property="og:site_name" content="Codemania">
   <meta property="og:locale" content="en_NZ">
@@ -25,7 +25,7 @@
   <meta property="twitter:title" content="Codemania">
   <meta property="twitter:description" content="New Zealand's premier conference for software developers.">
   <meta property="twitter:site" content="@codemania">
-  <meta property="twitter:image:src" content="%PUBLIC_URL%/card.png">
+  <meta property="twitter:image:src" content="https://codemania.io/card.png">
 
   <!--
       manifest.json provides metadata used when your web app is added to the
