--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,11 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-258894-6');
+    gtag('config', 'UA-258894-6', {
+      'linker': {
+        'domains': ['codemania-2018.lilregie.com']
+      }
+    });
   </script>
   <title>Codemania</title>
 </head>
