Google site verification

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <meta property="twitter:description" content="New Zealand's premier conference for software developers.">
   <meta property="twitter:site" content="@codemania">
   <meta property="twitter:image:src" content="https://codemania.io/card.png">
+  <meta name="google-site-verification" content="AqjG3SmOHeUf9INhOjhvJzh5XAS3uXH1xxbqBLKd46s" />
 
   <!--
       manifest.json provides metadata used when your web app is added to the
